cmake_minimum_required(VERSION 3.10)
project(RogueDungeon)


set(CMAKE_CXX_STANDARD 11)

# Getting the SDL2 Package
find_package(SDL2 REQUIRED)

include_directories(${SDL2_INCLUDE_DIRS})

add_executable(RogueDungeon main.cpp)

# Linking the SDL2 libraries
target_link_libraries(RogueDungeon ${SDL2_LIBRARIES})
